6819886: System.getProperty("os.name") reports Vista on Windows 7 Reviewed-by: jjg